only display the data-management tab if it is enabled in the settings (#52)